[ #1832, LaTeX backend ] Further changes.
Ulf Norell convinced me to change the design. Now a single space
suffices to start an indentation column, and the first token on a line
can (sometimes) be aligned with tokens preceded by a single space
character.

--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.tex
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.tex
@@ -5,7 +5,9 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{AccidentalSpacesBeforeEndCode} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[0I]%
+\>[0I]\AgdaModule{AccidentalSpacesBeforeEndCode}\<[1I]%
+\>[1I]\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
