--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
@@ -10,21 +10,33 @@
 \>[2]\AgdaKeyword{postulate}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaPostulate{+̲+̲+̲+̲+̲+̲} \<[12]%
+\>[4]\AgdaPostulate{+̲+̲+̲+̲+̲+̲}\<[12]%
 \>[12]\AgdaPostulate{A}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[12]%
-\>[12]\AgdaPostulate{B} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[12]\AgdaPostulate{B}\<[0I]%
+\>[0I]\AgdaSymbol{:}\<[1I]%
+\>[1I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 The two \AgdaKeyword{field} keywords should not be aligned:
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{record} \AgdaRecord{+̲} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where} \<[25]%
-\>[25]\AgdaKeyword{field} \AgdaField{C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaKeyword{record}\<[2I]%
+\>[2I]\AgdaRecord{+̲}\<[3I]%
+\>[3I]\AgdaSymbol{:}\<[4I]%
+\>[4I]\AgdaPrimitiveType{Set₁}\<[5I]%
+\>[5I]\AgdaKeyword{where}\<[25]%
+\>[25]\AgdaKeyword{field}\<[6I]%
+\>[6I]\AgdaField{C}\<[7I]%
+\>[7I]\AgdaSymbol{:}\<[8I]%
+\>[8I]\AgdaPrimitiveType{Set}\<%
 \\
 \>[25][@{}l@{\AgdaIndent{0}}]\<[26]%
-\>[26]\AgdaKeyword{field} \AgdaField{D} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[26]\AgdaKeyword{field}\<[9I]%
+\>[9I]\AgdaField{D}\<[10I]%
+\>[10I]\AgdaSymbol{:}\<[11I]%
+\>[11I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
