--- a/test/LaTeXAndHTML/succeed/Indenting7.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting7.tex
@@ -3,70 +3,106 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{Indenting7} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[0I]%
+\>[0I]\AgdaModule{Indenting7}\<[1I]%
+\>[1I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{module} \AgdaModule{A₁} \AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\<[2I]%
+\>[2I]\AgdaModule{A₁}\<[3I]%
+\>[3I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{module} \AgdaModule{A₂} \AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\<[4I]%
+\>[4I]\AgdaModule{A₂}\<[5I]%
+\>[5I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaKeyword{module} \AgdaModule{B₁} \AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\<[6I]%
+\>[6I]\AgdaModule{B₁}\<[7I]%
+\>[7I]\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaKeyword{module} \AgdaModule{B₂} \AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\<[8I]%
+\>[8I]\AgdaModule{B₂}\<[9I]%
+\>[9I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaKeyword{module} \AgdaModule{C₁} \AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\<[10I]%
+\>[10I]\AgdaModule{C₁}\<[11I]%
+\>[11I]\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaKeyword{module} \AgdaModule{C₂} \AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\<[12I]%
+\>[12I]\AgdaModule{C₂}\<[13I]%
+\>[13I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[6][@{}l@{\AgdaIndent{0}}]\<[8]%
-\>[8]\AgdaKeyword{module} \AgdaModule{D₁} \AgdaKeyword{where}\<%
+\>[8]\AgdaKeyword{module}\<[14I]%
+\>[14I]\AgdaModule{D₁}\<[15I]%
+\>[15I]\AgdaKeyword{where}\<%
 \\
 \>[6][@{}l@{\AgdaIndent{0}}]\<[8]%
-\>[8]\AgdaKeyword{module} \AgdaModule{D₂} \AgdaKeyword{where}\<%
+\>[8]\AgdaKeyword{module}\<[16I]%
+\>[16I]\AgdaModule{D₂}\<[17I]%
+\>[17I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaKeyword{module} \AgdaModule{C₃} \AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\<[18I]%
+\>[18I]\AgdaModule{C₃}\<[19I]%
+\>[19I]\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaKeyword{module} \AgdaModule{C₄} \AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\<[20I]%
+\>[20I]\AgdaModule{C₄}\<[21I]%
+\>[21I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{module} \AgdaModule{A₃} \AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\<[22I]%
+\>[22I]\AgdaModule{A₃}\<[23I]%
+\>[23I]\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaKeyword{module} \AgdaModule{B₃} \AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\<[24I]%
+\>[24I]\AgdaModule{B₃}\<[25I]%
+\>[25I]\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaKeyword{module} \AgdaModule{C₅} \AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\<[26I]%
+\>[26I]\AgdaModule{C₅}\<[27I]%
+\>[27I]\AgdaKeyword{where}\<%
 \\
 \>[6][@{}l@{\AgdaIndent{0}}]\<[8]%
-\>[8]\AgdaKeyword{module} \AgdaModule{D₃} \AgdaKeyword{where}\<%
+\>[8]\AgdaKeyword{module}\<[28I]%
+\>[28I]\AgdaModule{D₃}\<[29I]%
+\>[29I]\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaKeyword{module} \AgdaModule{C₆} \AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\<[30I]%
+\>[30I]\AgdaModule{C₆}\<[31I]%
+\>[31I]\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaKeyword{module} \AgdaModule{B₄} \AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\<[32I]%
+\>[32I]\AgdaModule{B₄}\<[33I]%
+\>[33I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{module} \AgdaModule{A₄} \AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\<[34I]%
+\>[34I]\AgdaModule{A₄}\<[35I]%
+\>[35I]\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
