--- a/test/LaTeXAndHTML/succeed/Issue2077-2.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2077-2.tex
@@ -5,7 +5,10 @@
 
 \AgdaHide{
 \begin{code}%
-\>[0]\AgdaKeyword{postulate} \AgdaPostulate{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaKeyword{postulate}\<[0I]%
+\>[0I]\AgdaPostulate{A}\<[1I]%
+\>[1I]\AgdaSymbol{:}\<[2I]%
+\>[2I]\AgdaPrimitiveType{Set}\<%
 \end{code}}
 
 \end{document}
