--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
@@ -11,7 +11,9 @@
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{Whatever} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{Whatever}\<[0I]%
+\>[0I]\AgdaSymbol{:}\<[1I]%
+\>[1I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
