--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
@@ -5,7 +5,9 @@
 
 \AgdaHide{
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{OneSpaceIndent} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[0I]%
+\>[0I]\AgdaModule{OneSpaceIndent}\<[1I]%
+\>[1I]\AgdaKeyword{where}\<%
 \end{code}
 }
 
@@ -14,7 +16,9 @@ Text1
 
 \AgdaHide{
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{Defs} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[2I]%
+\>[2I]\AgdaModule{Defs}\<[3I]%
+\>[3I]\AgdaKeyword{where}\<%
 \\
 %
 \\
@@ -27,7 +31,9 @@ Text2
 
 \begin{code}%
 \>[1][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaPostulate{Base} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{Base}\<[4I]%
+\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[5I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 Text3
