--- a/test/LaTeXAndHTML/succeed/Relative-indentation.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.tex
@@ -8,39 +8,46 @@
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{A} \<[5]%
+\>[2]\AgdaPostulate{A}\<[5]%
 \>[5]\AgdaPostulate{B}\<%
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaPostulate{C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{C}\<[0I]%
+\>[0I]\AgdaSymbol{:}\<[1I]%
+\>[1I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{D} \<[5]%
+\>[2]\AgdaPostulate{D}\<[5]%
 \>[5]\AgdaPostulate{E}\<%
 \\
 %
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaPostulate{F} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{F}\<[2I]%
+\>[2I]\AgdaSymbol{:}\<[3I]%
+\>[3I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{G} \<[5]%
-\>[5]\AgdaPostulate{H} \<[8]%
-\>[8]\AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{G}\<[5]%
+\>[5]\AgdaPostulate{H}\<[8]%
+\>[8]\AgdaSymbol{:}\<[4I]%
+\>[4I]\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{I}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[6]%
-\>[6]\AgdaPostulate{J} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{J}\<[5I]%
+\>[5I]\AgdaSymbol{:}\<[6I]%
+\>[6I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{AgdaMultiCode}{2}
@@ -48,22 +55,30 @@
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{K} \<[5]%
+\>[2]\AgdaPostulate{K}\<[5]%
 \>[5]\AgdaPostulate{L}\<%
 \end{code}
 \begin{code}%
 \>[5][@{}l@{\AgdaIndent{1}}]\<[6]%
-\>[6]\AgdaPostulate{M} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{M}\<[7I]%
+\>[7I]\AgdaSymbol{:}\<[8I]%
+\>[8I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaMultiCode}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record} \AgdaRecord{R} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\<[9I]%
+\>[9I]\AgdaRecord{R}\<[10I]%
+\>[10I]\AgdaSymbol{:}\<[11I]%
+\>[11I]\AgdaPrimitiveType{Set₁}\<[12I]%
+\>[12I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{field} \AgdaField{N} \AgdaSymbol{:}\<%
+\>[2]\AgdaKeyword{field}\<[13I]%
+\>[13I]\AgdaField{N}\<[14I]%
+\>[14I]\AgdaSymbol{:}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[12]%
+\>[14I][@{}l@{\AgdaIndent{0}}]\<[12]%
 \>[12]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
@@ -72,16 +87,24 @@
 
 \begin{AgdaAlign}
 text \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[15I]%
+\>[15I]\AgdaModule{\_}\<[16I]%
+\>[16I]\AgdaKeyword{where}\<%
 \end{code} more text
     also text  \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]\<[4]%
-\>[4]\AgdaKeyword{postulate} \AgdaPostulate{O} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[4]\AgdaKeyword{postulate}\<[17I]%
+\>[17I]\AgdaPostulate{O}\<[18I]%
+\>[18I]\AgdaSymbol{:}\<[19I]%
+\>[19I]\AgdaPrimitiveType{Set}\<%
 \end{code} text again
 
  text          \begin{code}%
 \>[0][@{}l@{\AgdaIndent{2}}]\<[4]%
-\>[4]\AgdaKeyword{postulate} \AgdaPostulate{o} \AgdaSymbol{:} \AgdaPostulate{O}\<%
+\>[4]\AgdaKeyword{postulate}\<[20I]%
+\>[20I]\AgdaPostulate{o}\<[21I]%
+\>[21I]\AgdaSymbol{:}\<[22I]%
+\>[22I]\AgdaPostulate{O}\<%
 \end{code}   text             
 \end{AgdaAlign}
 
@@ -89,47 +112,114 @@ text \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[1]%
-\>[1]\AgdaPostulate{P} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[1]\AgdaPostulate{P}\<[23I]%
+\>[23I]\AgdaSymbol{:}\<[24I]%
+\>[24I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[25I]%
+\>[25I]\AgdaModule{\_}\<[26I]%
+\>[26I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[1]%
 \>[1]\AgdaKeyword{postulate}\<%
 \\
 \>[1][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{Q} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{Q}\<[27I]%
+\>[27I]\AgdaSymbol{:}\<[28I]%
+\>[28I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[29I]%
+\>[29I]\AgdaModule{\_}\<[30I]%
+\>[30I]\AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[9]%
+\>[29I][@{}l@{\AgdaIndent{0}}]\<[30I]%
 \>[9]\AgdaKeyword{postulate}\<%
 \\
 \>[9][@{}l@{\AgdaIndent{0}}]\<[10]%
-\>[10]\AgdaPostulate{S} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[10]\AgdaPostulate{S}\<[31I]%
+\>[31I]\AgdaSymbol{:}\<[32I]%
+\>[32I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
-\begin{AgdaMultiCode}{1}
+\begin{AgdaMultiCode}{2}
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[33I]%
+\>[33I]\AgdaModule{\_}\<[34I]%
+\>[34I]\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaKeyword{postulate} \AgdaPostulate{T} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaKeyword{postulate}\<[35I]%
+\>[35I]\AgdaPostulate{T}\<[36I]%
+\>[36I]\AgdaSymbol{:}\<[37I]%
+\>[37I]\AgdaPrimitiveType{Set}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]\<[35I]%
+\>[12]\AgdaPostulate{U}\<[38I]%
+\>[38I]\AgdaSymbol{:}\<[39I]%
+\>[39I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaMultiCode}
 
-\begin{AgdaSuppressSpace}{1}
+\begin{AgdaSuppressSpace}{2}
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[40I]%
+\>[40I]\AgdaModule{\_}\<[41I]%
+\>[41I]\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaKeyword{postulate} \AgdaPostulate{U} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaKeyword{postulate}\<[42I]%
+\>[42I]\AgdaPostulate{V}\<[43I]%
+\>[43I]\AgdaSymbol{:}\<[44I]%
+\>[44I]\AgdaPrimitiveType{Set}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]\<[42I]%
+\>[12]\AgdaPostulate{W}\<[45I]%
+\>[45I]\AgdaSymbol{:}\<[46I]%
+\>[46I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaSuppressSpace}
+
+\begin{code}%
+\>[0]\AgdaFunction{X}\<[47I]%
+\>[47I]\AgdaSymbol{:}\<[48I]%
+\>[48I]\AgdaPrimitiveType{Set₁}\<%
+\\
+\>[0]\AgdaFunction{X}\<[49I]%
+\>[49I]\AgdaSymbol{=}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]\<[49I]%
+\>[2]\AgdaPrimitiveType{Set}\<%
+\end{code}
+
+\begin{code}%
+\>[0]\AgdaFunction{Y}\<[50I]%
+\>[50I]\AgdaSymbol{:}\<[51I]%
+\>[51I]\AgdaPrimitiveType{Set₁}\<%
+\\
+\>[0]\AgdaFunction{Y}\<[52I]%
+\>[52I]\AgdaSymbol{=}\<[10]%
+\>[10]\AgdaPrimitiveType{Set}\<%
+\\
+%
+\\
+\>[0]\AgdaFunction{Zzzzzzzzz}\<[53I]%
+\>[53I]\AgdaSymbol{:}\<[54I]%
+\>[54I]\AgdaPrimitiveType{Set}\<[55I]%
+\>[55I]\AgdaSymbol{→}\<[56I]%
+\>[56I]\AgdaPrimitiveType{Set}\<%
+\\
+\>[0]\AgdaFunction{Zzzzzzzzz}\<[57I]%
+\>[57I]\AgdaBound{X}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]\<[57I]%
+\>[10]\AgdaSymbol{=}\<[58I]%
+\>[58I]\AgdaBound{X}\<%
+\end{code}
 
 \end{document}
