--- a/test/LaTeXAndHTML/succeed/UnicodeDeclare.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeDeclare.tex
@@ -14,7 +14,9 @@
 \begin{code}%
 \>[0]\AgdaComment{{-}{-} ◯ = Set}\<%
 \\
-\>[0]\AgdaFunction{◯} \AgdaSymbol{=} \AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaFunction{◯}\<[0I]%
+\>[0I]\AgdaSymbol{=}\<[1I]%
+\>[1I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
