--- a/test/LaTeXAndHTML/succeed/Indenting4.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting4.tex
@@ -5,15 +5,26 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{Indenting4} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[0I]%
+\>[0I]\AgdaModule{Indenting4}\<[1I]%
+\>[1I]\AgdaKeyword{where}\<%
 \end{code}
 
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaFunction{Pow} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaSymbol{→} \AgdaPrimitiveType{Set₁}\<%
+\>[2]\AgdaFunction{Pow}\<[2I]%
+\>[2I]\AgdaSymbol{:}\<[3I]%
+\>[3I]\AgdaPrimitiveType{Set}\<[4I]%
+\>[4I]\AgdaSymbol{→}\<[5I]%
+\>[5I]\AgdaPrimitiveType{Set₁}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
-\>[2]\AgdaFunction{Pow} \AgdaBound{X} \AgdaSymbol{=} \AgdaBound{X} \AgdaSymbol{→} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaFunction{Pow}\<[6I]%
+\>[6I]\AgdaBound{X}\<[7I]%
+\>[7I]\AgdaSymbol{=}\<[8I]%
+\>[8I]\AgdaBound{X}\<[9I]%
+\>[9I]\AgdaSymbol{→}\<[10I]%
+\>[10I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
