--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
@@ -3,24 +3,46 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\<[0I]%
+\>[0I]\AgdaDatatype{Nat}\<[1I]%
+\>[1I]\AgdaSymbol{:}\<[2I]%
+\>[2I]\AgdaPrimitiveType{Set}\<[3I]%
+\>[3I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{zero} \AgdaSymbol{:} \AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{zero}\<[4I]%
+\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[5I]\AgdaDatatype{Nat}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{suc} \AgdaSymbol{:} \AgdaDatatype{Nat} \AgdaSymbol{→} \AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{suc}\<[6I]%
+\>[6I]\AgdaSymbol{:}\<[7I]%
+\>[7I]\AgdaDatatype{Nat}\<[8I]%
+\>[8I]\AgdaSymbol{→}\<[9I]%
+\>[9I]\AgdaDatatype{Nat}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{pattern} \AgdaInductiveConstructor{two} \<[14]%
-\>[14]\AgdaSymbol{=} \AgdaInductiveConstructor{suc} \AgdaSymbol{(}\AgdaInductiveConstructor{suc} \AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
+\>[0]\AgdaKeyword{pattern}\<[10I]%
+\>[10I]\AgdaInductiveConstructor{two}\<[14]%
+\>[14]\AgdaSymbol{=}\<[11I]%
+\>[11I]\AgdaInductiveConstructor{suc}\<[12I]%
+\>[12I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\<[13I]%
+\>[13I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaKeyword{pattern} \AgdaInductiveConstructor{three} \AgdaSymbol{=} \AgdaInductiveConstructor{suc} \AgdaInductiveConstructor{two}\<%
+\>[0]\AgdaKeyword{pattern}\<[14I]%
+\>[14I]\AgdaInductiveConstructor{three}\<[15I]%
+\>[15I]\AgdaSymbol{=}\<[16I]%
+\>[16I]\AgdaInductiveConstructor{suc}\<[17I]%
+\>[17I]\AgdaInductiveConstructor{two}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data} \AgdaDatatype{Bot} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\<[18I]%
+\>[18I]\AgdaDatatype{Bot}\<[19I]%
+\>[19I]\AgdaSymbol{:}\<[20I]%
+\>[20I]\AgdaPrimitiveType{Set}\<[21I]%
+\>[21I]\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
