--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
@@ -3,30 +3,54 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\<[0I]%
+\>[0I]\AgdaDatatype{Nat}\<[1I]%
+\>[1I]\AgdaSymbol{:}\<[2I]%
+\>[2I]\AgdaPrimitiveType{Set}\<[3I]%
+\>[3I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{zero} \AgdaSymbol{:} \AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{zero}\<[4I]%
+\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[5I]\AgdaDatatype{Nat}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{suc} \AgdaSymbol{:} \AgdaDatatype{Nat} \AgdaSymbol{→} \AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{suc}\<[6I]%
+\>[6I]\AgdaSymbol{:}\<[7I]%
+\>[7I]\AgdaDatatype{Nat}\<[8I]%
+\>[8I]\AgdaSymbol{→}\<[9I]%
+\>[9I]\AgdaDatatype{Nat}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[10I]%
+\>[10I]\AgdaModule{\_}\<[11I]%
+\>[11I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{pattern} \AgdaInductiveConstructor{two} \<[16]%
-\>[16]\AgdaSymbol{=} \AgdaInductiveConstructor{suc} \AgdaSymbol{(}\AgdaInductiveConstructor{suc} \AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
+\>[2]\AgdaKeyword{pattern}\<[12I]%
+\>[12I]\AgdaInductiveConstructor{two}\<[16]%
+\>[16]\AgdaSymbol{=}\<[13I]%
+\>[13I]\AgdaInductiveConstructor{suc}\<[14I]%
+\>[14I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\<[15I]%
+\>[15I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{pattern} \AgdaInductiveConstructor{three} \AgdaSymbol{=} \AgdaInductiveConstructor{suc} \AgdaInductiveConstructor{two}\<%
+\>[2]\AgdaKeyword{pattern}\<[16I]%
+\>[16I]\AgdaInductiveConstructor{three}\<[17I]%
+\>[17I]\AgdaSymbol{=}\<[18I]%
+\>[18I]\AgdaInductiveConstructor{suc}\<[19I]%
+\>[19I]\AgdaInductiveConstructor{two}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data} \AgdaDatatype{Bot} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\<[20I]%
+\>[20I]\AgdaDatatype{Bot}\<[21I]%
+\>[21I]\AgdaSymbol{:}\<[22I]%
+\>[22I]\AgdaPrimitiveType{Set}\<[23I]%
+\>[23I]\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
