--- a/test/LaTeXAndHTML/succeed/Tag.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.tex
@@ -5,52 +5,80 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{Tag} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[0I]%
+\>[0I]\AgdaModule{Tag}\<[1I]%
+\>[1I]\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{module} \AgdaModule{Apa} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[2I]%
+\>[2I]\AgdaModule{Apa}\<[3I]%
+\>[3I]\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{bepa} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaSymbol{→} \AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaFunction{bepa}\<[4I]%
+\>[4I]\AgdaSymbol{:}\<[5I]%
+\>[5I]\AgdaPrimitiveType{Set}\<[6I]%
+\>[6I]\AgdaSymbol{→}\<[7I]%
+\>[7I]\AgdaPrimitiveType{Set}\<%
 \\
-\>[0]\AgdaFunction{bepa} \AgdaBound{x} \AgdaSymbol{=} \AgdaBound{x}\<%
+\>[0]\AgdaFunction{bepa}\<[8I]%
+\>[8I]\AgdaBound{x}\<[9I]%
+\>[9I]\AgdaSymbol{=}\<[10I]%
+\>[10I]\AgdaBound{x}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data} \AgdaDatatype{Cepa} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\<[11I]%
+\>[11I]\AgdaDatatype{Cepa}\<[12I]%
+\>[12I]\AgdaSymbol{:}\<[13I]%
+\>[13I]\AgdaPrimitiveType{Set}\<[14I]%
+\>[14I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaInductiveConstructor{cepa} \AgdaSymbol{:} \AgdaDatatype{Cepa}\<%
+\>[2]\AgdaInductiveConstructor{cepa}\<[15I]%
+\>[15I]\AgdaSymbol{:}\<[16I]%
+\>[16I]\AgdaDatatype{Cepa}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{record} \AgdaRecord{Depa} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\<[17I]%
+\>[17I]\AgdaRecord{Depa}\<[18I]%
+\>[18I]\AgdaSymbol{:}\<[19I]%
+\>[19I]\AgdaPrimitiveType{Set₁}\<[20I]%
+\>[20I]\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaField{depa} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[4]\AgdaField{depa}\<[21I]%
+\>[21I]\AgdaSymbol{:}\<[22I]%
+\>[22I]\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{epa} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{epa}\<[23I]%
+\>[23I]\AgdaSymbol{:}\<[24I]%
+\>[24I]\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{α} \<[6]%
-\>[6]\AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{α}\<[6]%
+\>[6]\AgdaSymbol{:}\<[25I]%
+\>[25I]\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{\_∘\_} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{\_∘\_}\<[26I]%
+\>[26I]\AgdaSymbol{:}\<[27I]%
+\>[27I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{tabular}{ll}
