--- a/test/LaTeXAndHTML/succeed/TeXExtension.tex
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.tex
@@ -8,26 +8,40 @@ Foo
 \begin{code}%
 \>[0]\<%
 \\
-\>[0]\AgdaKeyword{module} \AgdaModule{TeXExtension} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[0I]%
+\>[0I]\AgdaModule{TeXExtension}\<[1I]%
+\>[1I]\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaKeyword{data} \AgdaDatatype{Bool} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{data}\<[2I]%
+\>[2I]\AgdaDatatype{Bool}\<[3I]%
+\>[3I]\AgdaSymbol{:}\<[4I]%
+\>[4I]\AgdaPrimitiveType{Set}\<[5I]%
+\>[5I]\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaInductiveConstructor{true} \AgdaSymbol{:} \AgdaDatatype{Bool}\<%
+\>[4]\AgdaInductiveConstructor{true}\<[6I]%
+\>[6I]\AgdaSymbol{:}\<[7I]%
+\>[7I]\AgdaDatatype{Bool}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaInductiveConstructor{false} \AgdaSymbol{:} \AgdaDatatype{Bool}\<%
+\>[4]\AgdaInductiveConstructor{false}\<[8I]%
+\>[8I]\AgdaSymbol{:}\<[9I]%
+\>[9I]\AgdaDatatype{Bool}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaFunction{b} \AgdaSymbol{:} \AgdaDatatype{Bool}\<%
+\>[2]\AgdaFunction{b}\<[10I]%
+\>[10I]\AgdaSymbol{:}\<[11I]%
+\>[11I]\AgdaDatatype{Bool}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaFunction{b} \AgdaSymbol{=} \AgdaInductiveConstructor{false}\<%
+\>[2]\AgdaFunction{b}\<[12I]%
+\>[12I]\AgdaSymbol{=}\<[13I]%
+\>[13I]\AgdaInductiveConstructor{false}\<%
 \\
 \>[0]\<%
 \end{code}
