--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
@@ -12,10 +12,14 @@
 \>[0]\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{A}\<[0I]%
+\>[0I]\AgdaSymbol{:}\<[1I]%
+\>[1I]\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{B} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{B}\<[2I]%
+\>[2I]\AgdaSymbol{:}\<[3I]%
+\>[3I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \hrule
 \begin{code}%
@@ -47,7 +51,9 @@
 \end{code}
 \hrule
 \begin{code}%
-\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\<[4I]%
+\>[4I]\AgdaModule{\_}\<[5I]%
+\>[5I]\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
 \>[0]\<%
@@ -56,7 +62,9 @@
 \>[2]\AgdaKeyword{postulate}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
-\>[4]\AgdaPostulate{C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\>[4]\AgdaPostulate{C}\<[6I]%
+\>[6I]\AgdaSymbol{:}\<[7I]%
+\>[7I]\AgdaPrimitiveType{Set}\<%
 \end{code}
 \hrule
 \begin{AgdaAlign}
@@ -64,15 +72,19 @@
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{F} \<[5]%
-\>[5]\AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaSymbol{→} \AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{F}\<[5]%
+\>[5]\AgdaSymbol{:}\<[8I]%
+\>[8I]\AgdaPrimitiveType{Set}\<[9I]%
+\>[9I]\AgdaSymbol{→}\<[10I]%
+\>[10I]\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
-\>[2]\AgdaPostulate{X} \<[5]%
-\>[5]\AgdaSymbol{:} \AgdaPostulate{F}\<%
+\>[2]\AgdaPostulate{X}\<[5]%
+\>[5]\AgdaSymbol{:}\<[11I]%
+\>[11I]\AgdaPostulate{F}\<%
 \end{code}
 \begin{code}%
-\>[5][@{}l@{\AgdaIndent{1}}]\<[10]%
+\>[11I][@{}l@{\AgdaIndent{1}}]\<[10]%
 \>[10]\AgdaPostulate{A}\<%
 \end{code}
 \end{AgdaAlign}
